--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <header>
         <h1>Guru Terfavorit SD Alumna Tahun 2025</h1>
     </header>
+
+    <main class="voting-container">
+        </main>
     
     <div class="controls-container">
         <button onclick="resetVotes()" class="reset-button">
@@ -16,19 +19,18 @@
         </button>
 
         <a href="results.html" class="results-button">
-        Hasil
+            Hasil
         </a>
 
         <button onclick="generateReport()" class="download-button">
             Laporan
         </button>
     </div>
-    <main class="voting-container">
-        </main>
-
     <footer>
         
     </footer>
+
+</body>
 
     <script src="script.js"></script>
 </body>
