--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
         <h1>📊 Hasil Voting Guru Terfavorit</h1>
     </header>
 
-    <div class="controls-container">
+    <div class="controls-container-result">
         <a href="index.html" class="back-button">← Kembali ke Halaman Voting</a>
     </div>
 
@@ -32,4 +32,5 @@
 
     <script src="results_script.js"></script>
 </body>
+
 </html>
